--- a/sisaku.html
+++ b/sisaku.html
@@ -2,6 +2,7 @@
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
         <title>数字当て</title>
         <style type="text/css">
             html{
@@ -18,7 +19,7 @@
                 background: #97CDF3;
                 color: #FEFEFE;
                 margin: 5px;
-                padding: 8px 16px;
+                padding: 10px 16px;
                 min-width: 30px;
                 font-family: inherit;
                 font-size: 16px;
